@@ -6,6 +6,7 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 public class HashMapTextDao implements TextDao {
 
@@ -35,7 +36,7 @@ public class HashMapTextDao implements TextDao {
     public void delete(Long userId, Long textId) {
         map.computeIfPresent(userId, (id, texts) -> texts.stream()
                 .filter(text -> !text.getTextId().equals(textId))
-                .toList());
+                .collect(Collectors.toList()));
     }
 
 
